--- a/Wear/src/app/products/product-list/product-list.component.css
+++ b/Wear/src/app/products/product-list/product-list.component.css
@@ -1,5 +1,8 @@
 .list-btn-container {
-  position: relative;
+  position: fixed;
+  top: 10%;
+  left: 20%;
+  z-index: 1;
 }
 .product-list {
   position: relative;
@@ -7,8 +10,8 @@
   overflow: auto;
 }
 
-button.list-btn {
+/* button.list-btn {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-}
+} */
