--- a/Wear/src/app/shopping-list/shopping-list.component.css
+++ b/Wear/src/app/shopping-list/shopping-list.component.css
@@ -24,6 +24,7 @@
   margin-top: 3%;
   margin-left: 2%;
   /* background-color: blue; */
+  line-height: 1.5rem;
   font-size: 2rem;
 }
 
@@ -47,11 +48,15 @@
   font-family: "Bebas Neue", cursive;
   font-family: "Dancing Script", cursive;
   font-size: 2rem;
-  margin-left: 300px;
-  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 100px;
   color: #6d6875;
   letter-spacing: 3px;
-  line-height: 1rem;
+  line-height: 1.5rem;
 }
 .goback-product {
   margin-top: 30px;
@@ -80,15 +85,23 @@ a {
 
 .goback-product:hover {
   color: #b5838d;
-  /* transform: translateY(-3px); */
 }
 
 a > mat-icon:hover {
   color: #b5838d;
 }
 
-/* app-shopping-checkout {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-} */
+@media (max-width: 900px) {
+  .shopping-list-page {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+  .list-container {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .shopping-checkout {
+    width: 100%;
+  }
+}
