--- a/Wear/src/app/management/user-list/user/user.component.css
+++ b/Wear/src/app/management/user-list/user/user.component.css
@@ -12,3 +12,7 @@ mat-card {
   justify-content: space-evenly;
   border-bottom: 1px solid black;
 }
+
+mat-card:hover {
+  background-color: #ccb7ae;
+}
