--- a/Wear/src/app/products/product-list/product-list.component.css
+++ b/Wear/src/app/products/product-list/product-list.component.css
@@ -16,6 +16,7 @@
   align-items: center;
 }
 .empty-list {
+  font-size: 2rem;
   font-family: "Bebas Neue", cursive;
   font-family: "Dancing Script", cursive;
   display: flex;
