--- a/Wear/src/app/shopping-list/shopping-checkout/shopping-checkout.component.html
+++ b/Wear/src/app/shopping-list/shopping-checkout/shopping-checkout.component.html
@@ -1,6 +1,8 @@
 <div class="checkout-container">
   <div class="checkout-box">
-    <p><span class="checkout-title">Order Summary</span></p>
+    <div class="calc-box" id="checkout-title-box">
+      <div class="checkout-title">Order Summary</div>
+    </div>
     <div class="calc-box">
       <p><span class="checkout-item">Subtotal:</span></p>
       <p>
