add welcome page and add some style on edit form

--- a/Wear/src/app/app.component.html
+++ b/Wear/src/app/app.component.html
@@ -1,18 +1,6 @@
 <div class="header">
-  <app-header>
-    <!-- <a type="button" (click)="drawer.toggle()"> explore more >> </a> -->
-  </app-header>
+  <app-header> </app-header>
 </div>
-
-<!-- <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
-    <p>gender</p>
-    <p *ngIf="showFiller">xx</p>
-    <button (click)="showFiller = !showFiller" mat-raised-button>
-      Toggle extra text
-    </button>
-  </mat-drawer>
-</mat-drawer-container> -->
 
 <router-outlet></router-outlet>
 <div class="footer">
