fixed route lazy loading of products, shopping list and user management

--- a/Wear/src/app/management/user-list/user-list.component.html
+++ b/Wear/src/app/management/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <div class="user-list">
-  <div *ngIf="isLoading" class="spinner">
+  <!-- <div *ngIf="isLoading" class="spinner">
     <app-spinner></app-spinner>
-  </div>
+  </div> -->
   <div class="list-btn-container">
     <button
       mat-raised-button
