--- a/Wear/src/app/products/product-list/product-list.component.html
+++ b/Wear/src/app/products/product-list/product-list.component.html
@@ -11,9 +11,9 @@
     </button>
   </div>
   <br />
-  <div *ngIf="isLoading" class="spinner">
+  <!-- <div *ngIf="isLoading" class="spinner">
     <app-spinner></app-spinner>
-  </div>
+  </div> -->
   <div *ngIf="isEmpty" class="empty-list">
     <p>No Target Item! Please Try Other Keyword!</p>
   </div>
