--- a/Wear/src/app/component/header/header.component.html
+++ b/Wear/src/app/component/header/header.component.html
@@ -30,13 +30,9 @@
       </li>
     </ul>
     <div *ngIf="isAuth === 'visitor'">
-      <span (click)="onLogin()" routerLink="/user-auth" class="login-btn"
-        >User login</span
-      >
+      <span routerLink="/user-auth" class="login-btn">User login</span>
       |
-      <span (click)="onLogin()" routerLink="/admin-auth" class="login-btn"
-        >Admin login</span
-      >
+      <span routerLink="/admin-auth" class="login-btn">Admin login</span>
     </div>
     <div
       *ngIf="isAuth === 'admin'"
@@ -70,7 +66,6 @@
         class="menu-login"
         mat-menu-item
         *ngIf="isAuth === 'visitor'"
-        (click)="onLogin()"
         routerLink="/user-auth"
       >
         User Login
@@ -80,7 +75,6 @@
         class="menu-login"
         mat-menu-item
         *ngIf="isAuth === 'visitor'"
-        (click)="onLogin()"
         routerLink="/admin-auth"
       >
         Admin Login
